tests/testcases/invalid/semantic/31_missing_return_no_return_at_all.ciel
// Error: control may reach end of non-void function (no return at all)
int get_value() {
    int x = 5;
    int y = 10;
    // Error: no return statement
}

int main() {
    int val = get_value();
    return 0;
}
